@@ -1,0 +1,9 @@
+Title: fixed automation call 'delete piggyback host'
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.2.8p12
+Date: 1474977036
+Class: fix
+
+
